force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <description>The specific segment or scheduled portion of an event, like a workshop of presentation.</description>
    <label>Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>