force-app/main/default/objects/Session__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>The date &amp; time the session will end.</description>
    <inlineHelpText>The date &amp; time the session will end.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>