force-app/main/default/objects/Session__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event the session will be hosted at</description>
    <inlineHelpText>The Event the session will be hosted at</inlineHelpText>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Session</relationshipLabel>
    <relationshipName>Session</relationshipName>
    <type>Lookup</type>
</CustomField>