force-app/main/default/objects/Session__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>The date &amp; time the session will begin</description>
    <inlineHelpText>The date &amp; time the session will begin</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>